# altrium_transfer_client

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  setup.cfg
.github/workflows/: pre-commit.yml
tests/: tests.py
tests/data/: transfer_req_va.json
transfer_client/: icn_pojo.py  messages.py
transfer_client/v1/: icn.py  icn_pojo.py
