
[metadata]
name = transfer_client
version = 0.0.1
description = Transfer client
url = 'https://azalea.com.sg',
author = 'Azalea',
author_email = 'no-reply@azalea.com.sg',

[options]
include_package_data = true
packages =
    transfer_client

install_requires =
    dataclasses-json==0.5.7


[flake8]
max-line-length = 120
exclude = .tox,.git,docs,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,venv

[isort]
line_length = 88
known_first_party = transfer_client
multi_line_output = 3
default_section = THIRDPARTY
skip = venv/
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
